--- a/public/programme.html
+++ b/public/programme.html
@@ -75,6 +75,9 @@
 						<a class="nav-link page-scroll" href="../index.html">首页</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PASS平台</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/customer.html" style="color: #14bf98">工业电气解决方案</a>
 					</li>
 					<li class="nav-item">
@@ -93,7 +96,7 @@
 
 
 		<!-- Header -->
-		<header id="header" class="ex-header customerInfo">
+		<header id="header" class="ex-header gongye">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
