--- a/public/mom.html
+++ b/public/mom.html
@@ -75,6 +75,9 @@
 						<a class="nav-link page-scroll" href="../index.html">首页</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PASS平台</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/programme.html">工业电气解决方案</a>
 					</li>
 					<li class="nav-item">
