--- a/index.html
+++ b/index.html
@@ -200,21 +200,71 @@
 		</div>
 
 
-		<!-- <div class="container" id="LINXPaaS">
-			<h2 style="text-align: center;margin: 50px 0;">传统开发模式 VS. LINXPaaS 自主模式</h2>
-			<div class="leftCard">
-                 <div class="oneBlack">1</div>
-			</div>
-			<div class="cennterCard">
-                <div class="oneBlack">
-					
+		<div class="container" id="LINXPaaS">
+			<h2 style="text-align: center;margin: 150px 0;">传统开发模式 VS. LINXPaaS 自主模式</h2>
+			<div class="LINXPaaCard">
+				<div class="LINXPaaCardLeft">
+					<div class="textCard CardLeft  animate__animated animate__fadeInUpBig">
+						<img src="images/icon/help.png">
+						<p>了解需求</p>
+					</div>
 				</div>
-                <div class="oneBlack"></div>
-			</div>
-			<div class="rightCard">
+				<div class="LINXPaaCardCenter">
+					<div class="LINXPaaCardCenterUp  animate__animated animate__fadeInUpBig">
+						<div class="textCard">
+							<img src="images/icon/wenjuna.png">
+							<p>方案调研</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/diedai.png">
+							<p>定制开发</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/chixu.png">
+							<p>实施交付</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/change.png">
+							<p>变更开发</p>
+						</div>
+
+					</div>
+					<div class="LINXPaaCardCenterDown">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/fenxi.png">
+							<p>模型分析</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/moments.png">
+							<p>MOM配置</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/up.png">
+							<p>实施上线</p>
+						</div>
+						<img src="images/icon/jiantou.png" class="jiantou">
+						<div class="textCard  animate__animated animate__fadeInUpBig">
+							<img src="images/icon/zizhu.png">
+							<p>自主变更</p>
+						</div>
+					</div>
+
+				</div>
+				<div class="LINXPaaCardRight">
+					<div class="textCard CardRight  animate__animated animate__fadeInUpBig">
+						<img src="images/icon/change.png">
+						<p>更新迭代</p>
+					</div>
+				</div>
 
 			</div>
-		</div> -->
+
+		</div>
 
 
 
