--- a/public/programme.html
+++ b/public/programme.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+		<meta name="description"
+			content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
 		<meta name="author" content="Inovatik">
 
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -28,8 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
+			rel="stylesheet">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -58,12 +61,12 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;background: #fff;border-radius: 5%;"
-				 src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img
+					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-			 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-awesome fas fa-bars"></span>
 				<span class="navbar-toggler-awesome fas fa-times"></span>
 			</button>
@@ -78,7 +81,8 @@
 						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PASS平台</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link page-scroll" href="../public/customer.html" style="color: #14bf98">工业电气解决方案</a>
+						<a class="nav-link page-scroll" href="../public/customer.html"
+							style="color: #14bf98">工业电气解决方案</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href=" ../public/mom.html">MOM软件系统产品</a>
@@ -122,23 +126,47 @@
 						<!-- Card -->
 						<div class="card">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/services-1.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
 							</div>
 							<div class="card-body">
-								<h3 class="card-title">电气元器件</h3>
-								<p>简述.....</p>
+								<h3 class="card-title">工业电气MOM 解决方案</h3>
+								<p>涉及产品案例:</p>
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点1</div>
+										<div class="media-body">变压器</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">中压开关</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点2</div>
+										<div class="media-body">低压断路器</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">高低压变频器</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点3</div>
+										<div class="media-body">硅晶体太阳能</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">高压母线</div>
+									</li>
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">真空断路器</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">接触器</div>
+									</li>
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">低压配电柜</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">高低压母线</div>
+									</li>
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">配电柜</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">高中压预制舱</div>
 									</li>
 								</ul>
 							</div>
@@ -152,23 +180,66 @@
 						<!-- Card -->
 						<div class="card">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/services-2.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
 							</div>
 							<div class="card-body">
-								<h3 class="card-title">低压</h3>
+								<h3 class="card-title">PCBA行业APS解决方案</h3>
+								<p>涉及产品案例:</p>
+								<ul class="list-unstyled li-space-lg">
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">液晶显示器</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">机械硬盘</div>
+									</li>
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">路由器</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">机顶盒</div>
+									</li>
+									<li class="media">
+										<i class="fas fa-square"></i>
+										<div class="media-body">汽车BCM</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">汽车空调控制</div>
+									</li>
+								</ul>
+
+							</div>
+							<div class="button-container">
+								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+							</div>
+							<!-- end of button-container -->
+						</div>
+						<!-- end of card -->
+
+						<!-- Card -->
+						<div class="card">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
+							</div>
+							<div class="card-body">
+								<h3 class="card-title">车零部件解决方案</h3>
 								<p>简述....</p>
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点1</div>
+										<div class="media-body">汽车座椅</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">离合器壳体</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点2</div>
+										<div class="media-body">变速箱壳体</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">变速箱凸轮轴</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点3</div>
+										<div class="media-body">汽车BCM</div>
+										<i class="fas fa-square"></i>
+										<div class="media-body">汽车空调控制</div>
 									</li>
 								</ul>
 							</div>
@@ -182,23 +253,23 @@
 						<!-- Card -->
 						<div class="card">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/fang.png" alt="alternative">
 							</div>
 							<div class="card-body">
-								<h3 class="card-title">中压</h3>
+								<h3 class="card-title">防窜货解决方案</h3>
 								<p>简述....</p>
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点1</div>
+										<div class="media-body">防伪,防窜货</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点2</div>
+										<div class="media-body">溯源</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点3</div>
+										<div class="media-body">大数据营销</div>
 									</li>
 								</ul>
 							</div>
@@ -212,53 +283,23 @@
 						<!-- Card -->
 						<div class="card">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/hanjie.jpg" alt="alternative">
 							</div>
 							<div class="card-body">
-								<h3 class="card-title">变压器</h3>
+								<h3 class="card-title">焊接(多行业)解决方案</h3>
 								<p>简述....</p>
 								<ul class="list-unstyled li-space-lg">
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点1</div>
+										<div class="media-body">汽车座椅</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点2</div>
+										<div class="media-body">风力发电</div>
 									</li>
 									<li class="media">
 										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点3</div>
-									</li>
-								</ul>
-							</div>
-							<div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div>
-							<!-- end of button-container -->
-						</div>
-						<!-- end of card -->
-
-						<!-- Card -->
-						<div class="card">
-							<div class="card-image">
-								<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
-							</div>
-							<div class="card-body">
-								<h3 class="card-title">电缆</h3>
-								<p>简述....</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点1</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点2</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">重要特点3</div>
+										<div class="media-body">高铁</div>
 									</li>
 								</ul>
 							</div>
@@ -325,14 +366,16 @@
 						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
 						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
 							+86-18017032987</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : yanqian_liao@linxvalley.com
+						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> :
+							yanqian_liao@linxvalley.com
 						</p>
 						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
 					</div>
-		
+
 				</div>
-		
+
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
@@ -349,14 +392,14 @@
 						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
 					</div>
 				</div>
-		
+
 				<div class='col-md-2'>
 					<div class='text-container' style='text-align: centermargin: 0 auto'>
 						<h6 style='color: #FFFFFF'>企业证书</h6>
 						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
 					</div>
 				</div>
-		
+
 			</div>
 		</div>
 		<div class='copyright'>
