--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		</div>
 
 
-		<div class="container" id="cost">
+		<div id="cost">
 			<h2 style="text-align: center;margin: 50px 0;">LINXPaaS---- 为您节省80%数字化工厂总成本</h2>
 			<h2 style="text-align: center;margin: 50px 0;">低代码开发<span style="color: #14bf98; font-weight: bold;"> +
 				</span>配置化MOM 软件系统模板</h2>
@@ -201,7 +201,7 @@
 
 
 		<div class="container" id="LINXPaaS">
-			<h2 style="text-align: center;margin: 150px 0;">传统开发模式 VS. LINXPaaS 自主模式</h2>
+			<h2 style="text-align: center;margin: 100px 0;">传统开发模式 VS. LINXPaaS 自主模式</h2>
 			<div class="LINXPaaCard">
 				<div class="LINXPaaCardLeft">
 					<div class="textCard CardLeft  animate__animated animate__fadeInUpBig">
@@ -271,143 +271,64 @@
 
 
 
-		<div class=" container" id="switch">
-			<h2 style="text-align: center;margin: 50px 0;">落地案例覆盖的工业电气产品</h2>
-			<div class="row">
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>开关插座</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/dc.png" style="width: 22%;">
-					<p>插头插座、地插</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/dlqkg.png" style="width: 22%;">
-					<p>空气开关、断路器</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/ldkg.png" style="width: 32%;">
-					<p>漏电开关、浪涌防雷</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/jcq.png" style="width: 22%;">
-					<p>接触器、热继电器</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/wyq.png" style="width: 29%;">
-					<p>稳压器、调压器</p>
-				</div>
+		<div class="cards-1" id="hexin">
+			<h2>LINXPaaS将为您带来的价值</h2>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Card -->
+						<div class="card" style="height: 270px;">
+							<span class="fa-stack">
+								<img src="images/huojian.png" alt="" style="width: 100px;">
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">加速制造运营创新</h4>
+								<p>
+									将新产品导入、制造过程管理自动化，为客户创造更快、更好的服务和商品
+								</p>
+							</div>
+						</div>
+						<!-- end of card -->
 
+						<!-- Card -->
+						<div class="card" style="height: 270px;">
+							<span class="fa-stack">
+								<img src="images/yunying.png" alt="" style="width: 90px;">
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">深化运营管理数字化</h4>
+								<p>将整个企业（包括供应商）创建流畅的信息、洞察和行为流，
+									并提高制造运营提升的准确性和目标性。</p>
+							</div>
+						</div>
+						<!-- end of card -->
 
-			</div>
-			<div class="row">
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>按钮、指示灯</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/jdq.png" style="width: 22%;">
-					<p>继电器、时控开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>电气辅材</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>充电站、充电机</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/pdx.png" style="width: 22%;">
-					<p>配电箱、弱电箱</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/dx.png" style="width: 22%;">
-					<p>电线电缆</p>
-				</div>
+						<!-- Card -->
+						<div class="card" style="height: 270px;">
+							<span class="fa-stack">
+								<img src="images/quanyuan.png" alt="" style="width: 90px;">
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">赋能员工，全员参与数字化</h4>
+								<p>简化运营过程的数字化转型对于IT技术的依赖，
+									为员工配备数字化助手，不放过每一个可以数字化的机会。</p>
+							</div>
+						</div>
+						<!-- end of card -->
 
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
 			</div>
-			<div class="row">
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/byq.png" style="width: 25%;">
-					<p>变压器</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/rdq.png" style="width: 20%;">
-					<p>熔断器</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/dkg.png" style="width: 20%;">
-					<p>刀开关、时空开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/zhkg.png" style="width: 25%;">
-					<p>组合开关、切换开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/xckg.png" style="width: 22%;">
-					<p>行程开关、微动开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>电表电仪、互感器</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/sdyqhkg.png" style="width: 32%;">
-					<p>双电源切换开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/kgdy.png" style="width: 30%;">
-					<p>开关电源</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/wnsrdq.png" style="width: 30%;">
-					<p>万能式阻断器</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/bpq.png" style="width: 30%;">
-					<p>变频器、软启动</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/qdyj.png" style="width: 22%;">
-					<p>电动原件</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/fbdq.png" style="width: 22%;">
-					<p>防爆电器</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>灯具照明</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/rdq.png" style="width: 20%;">
-					<p>高频熔断器开关</p>
-				</div>
-				<div class="col-lg-2">
-					<img class="img-fluid" src="images/dianqi/switch.png" style="width: 22%;">
-					<p>其他产品</p>
-				</div>
-			</div>
+			<!-- end of container -->
 		</div>
 
 
-
-
-
-
-
-
-
 		<!-- Contact -->
-		<div id="contact">
+		<div id="contact" style="background-color: #fff;">
 			<div class="container">
-				<h2 style="text-align: center;margin: 50px 0;">LINXPaaS---- 深耕超复杂MES/MOM 低代码工业互联应用
+				<h2 style="text-align: center;margin: 50px 0;">庞大的头部客户群验证
 				</h2>
 				<div class="row imageslist">
 					<div class="col-lg-2">
@@ -458,6 +379,27 @@
 					</div>
 					<div class="col-lg-2">
 						<img class="img-fluid" src="images/logo/image5.png">
+					</div>
+					<div class="col-lg-2">
+						<img class="img-fluid" src="images/logo/logo1.png">
+					</div>
+					<div class="col-lg-4">
+						<img class="img-fluid" src="images/logo/logo2.png">
+					</div>
+					<div class="col-lg-4">
+						<img class="img-fluid" src="images/logo/logo3.png">
+					</div>
+					<div class="col-lg-2">
+						<img class="img-fluid" src="images/logo/logo4.png">
+					</div>
+					<div class="col-lg-4">
+						<img class="img-fluid" src="images/logo/logo5.png">
+					</div>
+					<div class="col-lg-2">
+						<img class="img-fluid" src="images/logo/logo6.png">
+					</div>
+					<div class="col-lg-2">
+						<img class="img-fluid" src="images/logo/logo7.png">
 					</div>
 				</div>
 			</div>
