--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -297,10 +297,132 @@
 			</div>
 		</div>
 
-		<div id="pinJie" class="container">
+		<!-- <div id="pinJie" class="container">
 			<h2>灵娃低代码平台适用于多行业、各类系统的快速搭建</h2>
 			<div class="pinJieImg"></div>
+		</div> -->
+		
+		<div class="cards-1" id="hexin">
+			<h2>LINXPaaS将为您带来的价值</h2>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Card -->
+						<div class="card" style="height: 380px;">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-chart-pie fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">MOM 系统</h4>
+								<p>
+									MES 制造执行系统、APS 高级计划排程系统、WMS 仓储管理系统、EAM设备|工装|检具|模具管理系统、 QMS质量管理系统、EMS能源管理系统等主要数字化工厂的软件系统。
+									根据实际现场实际情况，只需要根据实际现场流程，
+									进行简单调整适配就可以完成适用于不同工厂、车间、产线的软件应用。
+								</p>
+							</div>
+						</div>
+						<!-- end of card -->
+		
+						<!-- Card -->
+						<div class="card" style="height: 380px;">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-binoculars fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">精益管理系统</h4>
+								<p>ANDON暗灯系统，E-CALL电子叫料，Suggestion 培训管理系统，合理化建议 Suggestion，电子操作指导书E-SOP，
+								SPC统计过程控制系统，LayorAudit分层审核管理系统，CPC变更点管理系统 ，LeanSPF精益现场管理。。</p>
+							</div>
+						</div>
+						<!-- end of card -->
+		
+						<!-- Card -->
+						<div class="card" style="height: 380px;">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-list-alt fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">数据采集工具</h4>
+								<p>内嵌 1000+种数据采集通讯协议，在实际使用中仅需要进行通讯和地址配置，
+								就可以完成数据采集。</p>
+							</div>
+						</div>
+						<!-- end of card -->
+		
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+			</div>
+			<!-- end of container -->
 		</div>
+		
+		
+		<div id="home" class="cards-2" style="padding-top: 1rem;background-color: #fff;">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h2>平台优势</h2>
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">平台工具而非项目聚合产品</h3>
+								以开发平台为目标向开发多年研发积累形成的强大工具，而非根据项目聚合形成的配置化产品。
+								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。 
+							</div>
+						</div>
+						<!-- end of card -->
+		
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">坚实的应用软件落地验证</h3>
+								<ul class="list-unstyled li-space-lg">
+									依托平台开发的应用软件在已经经过了20年+实际工业互联场景使用验证，实现了在工业电器、汽车零部件、军工、航天、通用机械等行业大量实际落地交付。
+									覆盖了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同行业的应用开发及落地。
+		
+							</div>
+						</div>
+						<!-- end of card -->
+		
+						<!-- Card -->
+						<div class="card" style="margin-bottom: 1rem;">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
+							</div>
+							<div class="card-body" style="padding: 2rem 1em">
+								<h3 class="card-title">内嵌数采协议</h3>
+								内嵌了数百种工业数采协议，有效解决工业互联落地之中最为复杂的痛点。
+								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
+							</div>
+						</div>
+						 
+		
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+			</div>
+			<!-- end of container -->
+		</div>
+		
+		
+		
 
 		<div id="Office" class="container">
 			<h2>全面详尽的“Office” 式帮助文档</h2>
@@ -400,7 +522,7 @@
 						<p class='white'><img src='../images/icon/email.png' class='small'> :
 							yanqian_liao@linxvalley.com
 						</p>
-						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室</p>
 					</div>
 
 				</div>
